# lidar-surrogate-safety

./: .gitignore  README.md  pyproject.toml
configs/: centerpoint_pillar02_lumpi_cbgs_finetune.py  centerpoint_pillar02_lumpi_finetune.py  centerpoint_pillar02_tumtraf_finetune.py  centerpoint_pillar02_tumtraf_ts_finetune.py
scripts/: dump_tumtraf_detections.py  eval_lumpi_detection.py  eval_tumtraf_ap.py  eval_tumtraf_detection.py  extract_conflicts.py  fetch_orthophoto.py  make_lumpi_rrd.py  plot_bev_trajectories.py  plot_conflict_analysis.py  plot_cross_site.py  plot_detection_comparison.py  plot_e2e_validation.py  plot_gap_closing.py  plot_gap_closing_vru.py  plot_speed_validation.py  prepare_lumpi_training.py  prepare_tumtraf_training.py  project_lidar_to_camera.py  render_lumpi_mp4.py  render_lumpi_mp4_3d.py  run_lumpi_conflicts.py  run_lumpi_pipeline.py  run_nuscenes_pipeline.py  solve_lumpi_georef.py  solve_tumtraf_georef.py  sweep_hbe_recovery.py  tag_conflict_lanes.py
src/lidar_pilot/: __init__.py  conflicts.py  kinematics.py  trajectory.py  viz.py
src/lidar_pilot/io/: __init__.py  lumpi.py  opendrive.py  tumtraf.py
src/lidar_pilot/metrics/: __init__.py  events.py  pet.py  ttc.py
src/lidar_pilot/mmdet3d_plugins/: lumpi_dataset.py
src/lidar_pilot/tracking/: __init__.py  kalman.py  smoother.py  tracker.py
tests/: test_conflicts.py  test_kinematics.py  test_lumpi_io.py  test_opendrive.py  test_smoother.py  test_surrogate_metrics.py  test_tracking.py  test_tumtraf_io.py
